--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ ElmahConnectionString=Server=simple.dms.db;Database=SimpleDmsElmah;Persist Secur
 ApiUrl=api.simple-dms.test.fire-development.com
 sa_password=P@ssword1!
 attach_dbs=[{'dbName':'SimpleDms','dbFiles':['C:\\simple-dms-db\\SimpleDms.mdf','C:\\simple-dms-db\\SimpleDms_log.ldf']}]
+BuildTag=latest
