--- a/octopus.env
+++ b/octopus.env
@@ -1,4 +1,1 @@
-WEB_TAG=#{Octopus.Action.Package[WebImage].PackageVersion}
-WEB_IMAGE=#{Octopus.Action.Package[WebImage].PackageId}
-TEXT_MESSAGE=#{WebMessage}
-WEB_PORT=#{WebPort}
+BuildTag=#{Octopus.Action.Package[simpleDmsUi].PackageVersion}
