--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ SimpleDMSConnectionString=Server=simple.dms.db;Database=SimpleDms;Persist Securi
 ElmahConnectionString=Server=simple.dms.db;Database=SimpleDmsElmah;Persist Security Info=False;User ID=sa;Password=P@ssword1!;
 ApiUrl=api.simple-dms.test.fire-development.com
 sa_password=P@ssword1!
-attach_dbs=[{'dbName':'SimpleDms','dbFiles':['C:\\simple-dms-db\\SimpleDms.mdf','C:\\simple-dms-db\\SimpleDms_log.ldf']}]
+attach_dbs=[{'dbName':'SimpleDms','dbFiles':['C:\simple-dms-db\SimpleDms.mdf','C:\simple-dms-db\SimpleDms_log.ldf']}]
 BuildTag=#{BuildTag}
