--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-dropscanApiUrl=sd.dropscan.api:40345
-SimpleDMSConnectionString=Server=simple.dms.db;Database=SimpleDms;Persist Security Info=False;User ID=sa;Password=P@ssword1!;
-ElmahConnectionString=Server=simple.dms.db;Database=SimpleDmsElmah;Persist Security Info=False;User ID=sa;Password=P@ssword1!;
-ApiUrl=api.simple-dms.test.fire-development.com
-sa_password=P@ssword1!
-attach_dbs=[{'dbName':'SimpleDms','dbFiles':['C:\simple-dms-db\SimpleDms.mdf','C:\simple-dms-db\SimpleDms_log.ldf']}]
-BuildTag=#{BuildTag}
+dropscanApiUrl=#{DROPSCAN_API_URL}
+SimpleDMSConnectionString=#{SIMPLE_DMS_CONNECTION_STRING}
+ElmahConnectionString=#{ELMAH_CONNECTION_STRING}
+ApiUrl=#{SIMPLE_DMS_API_URL}
+sa_password=#{DB_PASSWORD}
+attach_dbs=#{ATTACH_DBS}
+BuildTag=#{BUILD_TAG}
