--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,29 @@ version: '3.4'
 
 services:
   sd.dropscan.api:
+    container_name: sd.dropscan.api.container
     image: alexanderkozlov/dropscan-mock-api:${BuildTag}
     ports: 
       - "40345:80"
   sd.simpledms.ui:
+    container_name: sd.simpledms.ui.container
     image: alexanderkozlov/simple-dms-ui:${BuildTag}
+    environment:
+      - ApiUrl=${ApiUrl}
+  sd.simpledms.api:
+    container_name: sd.simpledms.api.container
+    image: alexanderkozlov/simple-dms-api:${BuildTag}
     environment:
       - dropscanApiUrl=${dropscanApiUrl}
       - ElmahConnectionString=${ElmahConnectionString}
       - SimpleDMSConnectionString=${SimpleDMSConnectionString}
     depends_on:
       - "sd.dropscan.api"
-  sd.simpledms.api:
-    image: alexanderkozlov/simple-dms-api:${BuildTag}
-    environment:
-      - ApiUrl=${ApiUrl}
-    depends_on:
-      - "sd.dropscan.api"
+      - "simple.dms.db"
     ports: 
       - "40346:80"
   simple.dms.db:
+    container_name: simple.dms.db.container
     image: microsoft/mssql-server-windows-developer
     ports:
       - "40350:1433"
