--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.4'
 
 services:
   sd.dropscan.api:
-    container_name: sd.dropscan.api.container
+    container_name: sd.dropscan.api.container-${BuildTag}
     image: alexanderkozlov/dropscan-mock-api:${BuildTag}
     ports: 
       - "40345:80"
   sd.simpledms.ui:
-    container_name: sd.simpledms.ui.container
+    container_name: sd.simpledms.ui.container-${BuildTag}
     image: alexanderkozlov/simple-dms-ui:${BuildTag}
     environment:
       - ApiUrl=${ApiUrl}
   sd.simpledms.api:
-    container_name: sd.simpledms.api.container
+    container_name: sd.simpledms.api.container-${BuildTag}
     image: alexanderkozlov/simple-dms-api:${BuildTag}
     environment:
       - dropscanApiUrl=${dropscanApiUrl}
@@ -24,7 +24,7 @@ services:
     ports: 
       - "40346:80"
   simple.dms.db:
-    container_name: simple.dms.db.container
+    container_name: simple.dms.db.container-${BuildTag}
     image: microsoft/mssql-server-windows-developer
     ports:
       - "40350:1433"
