--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,11 +33,9 @@ services:
       - ACCEPT_EULA=Y
       - attach_dbs=${attach_dbs}
     volumes:
-      - type: bind
+      - type: volume
         source: C:\Octopus\Work\databases
         target: C:\simple-dms-db
-        bind:
-          propagation: cached
 networks:
   default:
     external:
