--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ dropscanApiUrl=#{DROPSCAN_API_URL}
 SimpleDMSConnectionString=#{SIMPLE_DMS_CONNECTION_STRING}
 ElmahConnectionString=#{ELMAH_CONNECTION_STRING}
 ApiUrl=#{SIMPLE_DMS_API_URL}
+WhitelistedDomains=#{WHITELISTED_DOMAINS}
 sa_password=#{DB_PASSWORD}
 attach_dbs=#{ATTACH_DBS}
 BuildTag=#{BUILD_TAG}
