--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
   sd.simpledms.ui:
     container_name: sd.simpledms.ui.container-${BuildTag}
     image: alexanderkozlov/simple-dms-ui:${BuildTag}
-    environment:
-      - ApiUrl=${ApiUrl}
+    ports: 
+      - "40347:80"
   sd.simpledms.api:
     container_name: sd.simpledms.api.container-${BuildTag}
     image: alexanderkozlov/simple-dms-api:${BuildTag}
