--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
 
     server {
         listen       80;
-        server_name  simple-dms.test.sovarto.com www.simple-dms.test.sovarto.com 148.251.188.144;
+        server_name  simple-dms.test.sovarto.com www.simple-dms.test.sovarto.com;
 
         #charset koi8-r;
 
@@ -41,12 +41,14 @@ http {
 
         location / {
             proxy_pass   http://148.251.188.144:40347;
+			proxy_intercept_errors on;
+			error_page 404 /index.html;
         }
     }
 	
     server {
         listen       80;
-        server_name  api.simple-dms.test.sovarto.com www.api.simple-dms.test.sovarto.com 148.251.188.144;
+        server_name  api.simple-dms.test.sovarto.com www.api.simple-dms.test.sovarto.com;
 
         #charset koi8-r;
 
